# legged_mpc_control

./: .gitignore  .gitmodules  README.md  checklist.txt  plotJuggler_DebugLayout.xml
.devcontainer/: Dockerfile  devcontainer.json
gazebo_docker/: Dockerfile
src/legged_ctrl/: CMakeLists.txt  package.xml
src/legged_ctrl/config/: gazebo_a1_convex.yaml  gazebo_a1_lci.yaml  gazebo_go1_convex.yaml  gazebo_go1_lci.yaml  hardware_a1_convex.yaml  hardware_a1_lci.yaml  hardware_go1_convex.yaml  hardware_go1_lci.yaml
src/legged_ctrl/include/: A1Params.h  LeggedParams.h  LeggedState.h
src/legged_ctrl/include/estimation/: BasicEKF.h  BasicKF.h
src/legged_ctrl/include/interfaces/: BaseInterface.h  GazeboInterface.h  HardwareInterface.h
src/legged_ctrl/include/mpc_ctrl/: LeggedMPC.h
src/legged_ctrl/include/mpc_ctrl/ci_mpc/: LciMpc.h
src/legged_ctrl/include/mpc_ctrl/convex_mpc/: ConvexMpc.h  ConvexQPSolver.h
src/legged_ctrl/include/utils/: A1Kinematics.h  LeggedContactFSM.h  LeggedIKSolver.h  LeggedLogger.hpp  LeggedSafetyChecker.hpp  Utils.h
src/legged_ctrl/include/wbc_ctrl/: HoQp.h  task.h  wbc.h
src/legged_ctrl/launch/: cimpc_hardware.launch  gazebo_a1_cimpc.launch  gazebo_go1_cimpc.launch  gazebo_go1_convex.launch  hardware_a1_convex.launch  hardware_go1_cimpc.launch  hardware_go1_convex.launch  main_ctrl.launch
src/legged_ctrl/scripts/: plot_lci.py  requirements.txt  resetRobot.py  setGains.py
src/legged_ctrl/src/: LeggedState.cpp  main.cpp
src/legged_ctrl/src/estimation/: BasicEKF.cpp  BasicKF.cpp
src/legged_ctrl/src/interfaces/: BaseInterface.cpp  GazeboInterface.cpp  HardwareInterface.cpp
src/legged_ctrl/src/mpc_ctrl/: LeggedMPC.cpp
src/legged_ctrl/src/mpc_ctrl/ci_mpc/: LciMpc.cpp
src/legged_ctrl/src/mpc_ctrl/convex_mpc/: ConvexMpc.cpp  ConvexQPSolver.cpp
src/legged_ctrl/src/test/: ho_qp_test.cpp  test_altro.cpp  test_inv_kin.cpp  test_wbc.cpp
src/legged_ctrl/src/unitree_highlevel_ctrl/: ROSJoyProcessor.hpp  UnitreeComm.hpp  unitree_highlevel_ctrl.cpp
src/legged_ctrl/src/utils/: A1Kinematics.cpp  LeggedContactFSM.cpp  LeggedIKSolver.cpp  Utils.cpp
src/legged_ctrl/src/wbc_ctrl/: HoQp.cpp  ho_qp.cpp  wbc.cpp
src/legged_ctrl/urdf/go1_description/xacro/: robot.xacro
src/mocap_optitrack/src/natnet/: natnet_messages.cpp
