<?xml version="1.0"?>
<package format="2">
    <name>legged_ctrl</name>
    <version>0.0.1</version>
    <description>MPC controller </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="shuoyang@andrew.cmu.edu">shuo</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>unitree_legged_msgs</depend>
    <depend>ocs2_legged_robot</depend>
    <depend>pinocchio</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>

    </export>
</package>